# simulation-contracts

./: Anchor.toml  README.md  package-lock.json
.github/workflows/: deploy.yml  test.yml
docs/: SUMMARY.md
docs/developers/: integration.md
docs/developers/contracts/alons-box-v2/: error-codes.md  evidence-system.md  instructions.md  pda-accounts.md  security-model.md
docs/games/alons-box-v2/: donations.md  entry-fees.md  evidence-and-yes-pool.md  overview.md  rounds.md
docs/protocol/: fee-structure.md
docs/resources/: contract-addresses.md
programs/alons-box-v2/: Cargo.toml
programs/alons-box-v2/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs  utils.rs
programs/alons-box-v2/src/instructions/: claim_v2_evidence.rs  close_v2_entry.rs  close_v2_evidence.rs  close_v2_round.rs  create_round.rs  donate.rs  enter.rs  expire.rs  force_expire.rs  initialize.rs  mod.rs  record_v2_evidence.rs  settle.rs  sweep_v2_evidence.rs  update_game_authority.rs
programs/alons-box/src/: lib.rs
programs/alons-box/src/instructions/: migrate.rs  mod.rs
programs/two-pills/: Cargo.toml
programs/two-pills/src/: errors.rs  events.rs  lib.rs  state.rs  utils.rs
programs/two-pills/src/instructions/: claim.rs  close_position.rs  create_round.rs  deposit.rs  expire.rs  initialize.rs  mod.rs  settle.rs  sweep_unclaimed.rs  transfer_authority.rs
scripts/: init-v2.ts  initialize-pills.ts  migrate.ts
tests/: two-pills.ts  v2-01-lifecycle.ts  v2-02-pricing.ts  v2-03-adversarial.ts  v2-04-rollover.ts  v2-05-evidence.ts  v2-06-donate.ts  v2-07-update-authority.ts
