[package]
name = "two-pills"
version = "0.1.0"
description = "Anchor smart contract for Two Pills — AI-judged debate game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "two_pills"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }

# Pin blake3 to pre-edition2024 version. Solana platform-tools
# bundle rustc 1.84 which can't parse edition2024 crates.
blake3 = "=1.5.5"
